Resources/Day33/Flask/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-qadir
  labels:
    app: hello-qadir
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-qadir
  template:
    metadata:
      labels:
        app: hello-qadir
    spec:
      containers:
      - name: hello-qadir
        image: aqkhan001/eks-repository:v1
        ports:
        - containerPort: 80
