Resources/Day33/Flask/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-qadir
spec:
  selector:
    app: hello-qadir
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
