Resources/Day33/Flask/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-qadir
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "trainwithqadir.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-qadir
            port:
              number: 80
